objects/SurveyResponse__c.object
<CustomObject>
    <description>SFDC1-254: Customer Care - Survey Response Object</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC1-6010: account id of responded</description>
        <inlineHelpText>Account Name of the Customer who submitted the Survey Response.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityName__c</fullName>
        <description>This field has been created only for Template use</description>
        <formula>Training__r.ActivityName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>SFDC-4407: Number of days taken to resolve a Survey</description>
        <formula>IF(AND(ISPICKVAL(AlertType__c,&apos;Hot Alert&apos;),
          OR(ISPICKVAL(AlertStatus__c,&apos;Closed - Resolved with Customer&apos;),
             ISPICKVAL(AlertStatus__c,&apos;Closed - No Action Required&apos;),
			 ISPICKVAL(AlertStatus__c,&apos;Closed - Unable to Reach Customer&apos;)
			 )
		  ),ResolvedDate__c - ResponseDate__c,
    IF(OR(ISPICKVAL(AlertType__c,&apos;Neutral&apos;),ISPICKVAL(AlertType__c,&apos;Commendation&apos;)),0,Today() - ResponseDate__c)
	  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of calendar days the Hot Alert has been open.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AlertComments__c</fullName>
        <description>SFDC1-6010: validation: If alert status is resolved, the alert may not be null</description>
        <inlineHelpText>Open-text comments field to enter details on the Alert follow-up and resolution of the Survey Response.</inlineHelpText>
        <label>Alert Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AlertReason__c</fullName>
        <inlineHelpText>Reason for the Hot Alert.</inlineHelpText>
        <label>Alert Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AlertResponsibility__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing issue</fullName>
                </value>
                <value>
                    <fullName>Customer not contacted/slow response</fullName>
                </value>
                <value>
                    <fullName>Customer should not have been surveyed</fullName>
                </value>
                <value>
                    <fullName>Data Outage issue or outage</fullName>
                </value>
                <value>
                    <fullName>Incorrect entitlements</fullName>
                </value>
                <value>
                    <fullName>Internal workflow/process issue</fullName>
                </value>
                <value>
                    <fullName>Knowledge Gap/ Training</fullName>
                </value>
                <value>
                    <fullName>Price/Value</fullName>
                </value>
                <value>
                    <fullName>Query not resolved</fullName>
                </value>
                <value>
                    <fullName>Service/Platform issue or outage</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe/Opt-out issue</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlertResponsibility__c</fullName>
        <inlineHelpText>The area of responsibility for the Hot Alert.</inlineHelpText>
        <label>Alert Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party/Alliance &amp; Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Customer Care (Product/T2/T3)</fullName>
                </value>
                <value>
                    <fullName>Entitlements/Fulfilment</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing/Communications</fullName>
                </value>
                <value>
                    <fullName>OCC</fullName>
                </value>
                <value>
                    <fullName>Product (Data)</fullName>
                </value>
                <value>
                    <fullName>Product (Technology)</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlertStatus__c</fullName>
        <description>SFDC1-6010: If alert type is not null then status is required. Should be populated as new on create when alert type is not null</description>
        <inlineHelpText>Current status of the Survey Response.</inlineHelpText>
        <label>Alert Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AlertType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed - Resolved with Customer</fullName>
                </value>
                <value>
                    <fullName>Closed - No Action Required</fullName>
                </value>
                <value>
                    <fullName>Closed - Unable to Reach Customer</fullName>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                    <isActive>false</isActive>
                    <label>Inprogress</label>
                </value>
                <value>
                    <fullName>Null</fullName>
                    <isActive>false</isActive>
                    <label>Null</label>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                    <isActive>false</isActive>
                    <label>Resolved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlertType__c</fullName>
        <description>SFDC1-6010: Hot Alert, Commendation, can be null. The survey team can decide what triggers this and we can build workflows on this value. A workflow will trigger an email based on this value. For Phase 1 we are only expecting this value to be sent as hot alert or null</description>
        <inlineHelpText>The type of Alert that has been generated based on the Survey Response: Commendation, Neutral or Hot Alert.</inlineHelpText>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot Alert</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Commendation</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                    <isActive>false</isActive>
                    <label>Null</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CESScore__c</fullName>
        <description>SFDC1-6010: Carlos&apos; team to calculate and present as a whole number</description>
        <inlineHelpText>Customer Effort Score (CES) defining the level of effort required by the customer to request support, on a scale of 1 (Extremely difficult) - 7 (Extremely easy).</inlineHelpText>
        <label>CES Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSATScore__c</fullName>
        <formula>(TESScore__c +  CESScore__c  +  RSSScore__c) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer Satisfaction Score (CSAT) defines overall satisfaction, calculated as a simple average of CES, RSS &amp; TES, on a scale of 1 (Extremely unsatisfied) - 7 (Extremely satisfied). Note: Hot Alert triggers are not enabled on this formula field.</inlineHelpText>
        <label>CSAT Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseClosedDate__c</fullName>
        <description>SFDC1-1895: Formula field to populate Case Closed Date</description>
        <formula>Case__r.ClosedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date on which the surveyed Case was closed.</inlineHelpText>
        <label>Case Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaseOwnerEmailId__c</fullName>
        <description>SFDC1-1895: Case Owner Manager&apos;s Email Id</description>
        <inlineHelpText>Email address of the Owner of the surveyed Case.</inlineHelpText>
        <label>Case Owner Manager Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CaseOwnerId__c</fullName>
        <formula>Case__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <description>SFDC1-1895: Formula field to populate Case Owner</description>
        <formula>Case__r.Owner:User.FirstName +&apos; &apos;+ Case__r.Owner:User.LastName</formula>
        <inlineHelpText>Owner of the Case to whom the Survey Response pertains to.</inlineHelpText>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseProductGroup__c</fullName>
        <description>SFDC-246: Formula field to populate Case Product Group Name</description>
        <formula>Case__r.ProductGroup__r.Name</formula>
        <inlineHelpText>Product Group as selected on the Case.</inlineHelpText>
        <label>Case Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-254: populated and required when type is Customer Care, else null and read only</description>
        <inlineHelpText>Case number for which the Survey Response was received.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment10__c</fullName>
        <inlineHelpText>New fields, in place to capture data when bringing it back from the surveys</inlineHelpText>
        <label>Comment 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment1__c</fullName>
        <inlineHelpText>New fields, in place to capture data when bringing it back from the surveys</inlineHelpText>
        <label>Comment 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment2__c</fullName>
        <inlineHelpText>New fields, in place to capture data when bringing it back from the surveys</inlineHelpText>
        <label>Comment 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-254 : Comments. Any other comments to be provided in the Survey</description>
        <inlineHelpText>Verbatim open comments from the survey.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>SFDC1-1895: Formula field to populate Contact Email</description>
        <formula>Contact__r.Email</formula>
        <inlineHelpText>Email Address of the customer contact who submitted the Survey Response.</inlineHelpText>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC1-254: contactid of responded</description>
        <inlineHelpText>Customer Contact who submitted the Survey Response.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DistributionList1__c</fullName>
        <defaultValue>$Label.DistributionList1</defaultValue>
        <description>SFDC1-1895: Distribution list 1 to send email alert</description>
        <inlineHelpText>Initial mailing list to receive Alert emails.</inlineHelpText>
        <label>Distribution List 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DistributionList2__c</fullName>
        <defaultValue>$Label.DistributionList2</defaultValue>
        <description>SFDC1-1895: Distribution list 2 to sent email alert</description>
        <inlineHelpText>Default mailing list to receive Alert emails if Distribution List 1 is not provided.</inlineHelpText>
        <label>Distribution List 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>SFDC-5596: Field for reporting purpose 
        US-5103081: update field name and values</description>
        <label>Business Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commodity Insights</fullName>
                </value>
                <value>
                    <fullName>Corporate Global Shared Services</fullName>
                </value>
                <value>
                    <fullName>Dow Jones Indices</fullName>
                </value>
                <value>
                    <fullName>Engineering Solutions</fullName>
                </value>
                <value>
                    <fullName>Market Intelligence</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>OSTTRA</fullName>
                </value>
                <value>
                    <fullName>Ratings</fullName>
                </value>
                <value>
                    <fullName>Consolidated Markets &amp; Solutions</fullName>
                    <isActive>false</isActive>
                    <label>Consolidated Markets &amp; Solutions</label>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                    <isActive>false</isActive>
                    <label>Financial Services</label>
                </value>
                <value>
                    <fullName>Resources</fullName>
                    <isActive>false</isActive>
                    <label>Resources</label>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                    <isActive>false</isActive>
                    <label>Transportation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExperienceQuestion__c</fullName>
        <inlineHelpText>Overall customer Experience score based on interacting and doing business with IHS Markit, on a scale of 1 (Extremely negative) - 7 (Extremely positive).</inlineHelpText>
        <label>Experience Question</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSAOwnerId__c</fullName>
        <description>SFDC-4091: Backend field for FSA Owner Id</description>
        <formula>CASESAFEID(Training__r.OwnerId)</formula>
        <label>FSA Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSAOwner__c</fullName>
        <formula>Training__r.Owner:User.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Owner of the FSA to whom the Survey Response pertains to.</inlineHelpText>
        <label>FSA Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <defaultValue>&quot;EN&quot;</defaultValue>
        <description>SFDC-4091: Language selected to fill the survey</description>
        <inlineHelpText>Language in which the Corporate Survey was completed by the customer (EN = English, JA = Japanese).</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Contains case Id of L-Markit record.</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LikelihoodToRenew__c</fullName>
        <inlineHelpText>Customer&apos;s likelihood to renew their contract with IHS Markit on a scale of  1 (Extremely unlikely) - 7 (Extremely likely).</inlineHelpText>
        <label>Likelihood To Renew</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPSScoreFromQualtrics__c</fullName>
        <label>NPS Score From Qualtrics</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPSScore__c</fullName>
        <description>Calculated Net Promoter Score. This score is provided by the survey team on a scale from 0-10.</description>
        <inlineHelpText>Net Promoter Score (NPS) measures the likelihood of the customer to recommend IHS Markit to a colleague or industry contact, on a scale of 0 (Not at all likely) - 10 (Extremely likely).</inlineHelpText>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PKIDSurvResp__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>SvR{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID SurvResp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PrimaryInstructor__c</fullName>
        <description>Field is created for template use only</description>
        <formula>Training__r.PrimaryInstructor__r.FirstName +&apos; &apos;+ Training__r.PrimaryInstructor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the primary training instructor who conducted the training session.</inlineHelpText>
        <label>Primary Instructor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroupLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Look up field to allocate the relevant Product/Service that the customer&apos;s corporate survey response pertains to.</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroups__c</fullName>
        <formula>Training__r.ProductGroups__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The aggregated list of Product Groups as added to the FSA training session.</inlineHelpText>
        <label>Product Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductsServicesMeetNeed__c</fullName>
        <inlineHelpText>A measure of the customer&apos;s overall needs met by IHS Markit&apos;s product(s) and/or service(s), on a scale of 1 (Strongly disagree) - 7 (Strongly agree).</inlineHelpText>
        <label>Products/Services Meet Need</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question10__c</fullName>
        <description>SFDC1-6010: text of questions - can be null if not all 10 questions are asked</description>
        <label>Question 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question11__c</fullName>
        <label>Question 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question12__c</fullName>
        <label>Question 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSSScore__c</fullName>
        <description>Calculated Rep Satisfaction Score. This score is provided by the survey team on a scale from 1-7.</description>
        <inlineHelpText>Rep Satisfaction Score (RSS) measures the customer&apos;s satisfaction level, based on the service provided by the Case owner, on a scale of 1 (Extremely dissatisfied) - 7 (Extremely satisfied).</inlineHelpText>
        <label>RSS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecipientEmailSource__c</fullName>
        <inlineHelpText>The source system(s) from which the customer data has been derived and used to send the Corporate Survey.</inlineHelpText>
        <label>Recipient Email Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientEmail__c</fullName>
        <inlineHelpText>The customer&apos;s email address to which the Corporate Survey was sent.</inlineHelpText>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RecipientFirstName__c</fullName>
        <description>SFDC-4091: First Name of the responded</description>
        <inlineHelpText>The customer&apos;s first name as on the corporate survey mailing list.</inlineHelpText>
        <label>Recipient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientLastName__c</fullName>
        <description>SFDC-4091: Last name of the responded</description>
        <inlineHelpText>The customer&apos;s last name as on the corporate survey mailing list.</inlineHelpText>
        <label>Recipient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolutionComments1__c</fullName>
        <description>SFDC-4233 adding resolution comments text field and replacing the rich text area field</description>
        <inlineHelpText>Mandatory field to describe the resolution action(s) taken in order to close the Hot Alert.</inlineHelpText>
        <label>Resolution Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolutionComments__c</fullName>
        <label>zzzResolution Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ResolvedDate__c</fullName>
        <description>SFDC-4407 - Field to store the date on which Hot alert survey is resolved</description>
        <inlineHelpText>The date on which the Hot Alert was resolved.</inlineHelpText>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response10__c</fullName>
        <description>SFDC1-6010: answer to question 10 - can be null if not all 10 questions are asked</description>
        <label>Response 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response11__c</fullName>
        <label>Response 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response12__c</fullName>
        <label>Response 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response3Score__c</fullName>
        <description>SFDC-752 numeric score for response 3 field on the survey for reporting purposes</description>
        <formula>CASE( Response3__c ,&quot;Extremely satisfied&quot; , 7, 
       &quot;Very satisfied&quot;, 6,
       &quot;Satisfied&quot;, 5,
       &quot;Undecided&quot;, 4,
       &quot;Dissatisfied&quot;,3,
       &quot;Very dissatisfied&quot;,2,
       &quot;Extremely dissatisfied&quot;,1
        ,null)</formula>
        <label>Response 3 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response4Score__c</fullName>
        <description>SFDC-752 numeric score for response 4 field on the survey for reporting purposes</description>
        <formula>CASE(Response4__c ,&quot;Extremely shorter than expected&quot;,7,
&quot;Much shorter than expected&quot; , 6,
&quot;Somewhat shorter than expected&quot;,6,
&quot;Shorter than expected&quot;, 5,
&quot;As expected&quot;, 4,
&quot;Longer than expected&quot;, 3,
&quot;Much longer than expected&quot;,2,
&quot;Somewhat longer than expected&quot;,2,
&quot;Extremely longer than expected&quot;,1
,null)</formula>
        <label>Response 4 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResponseDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>SFDC1-254: Date on which survey was taken</description>
        <inlineHelpText>The date on which the Survey Response was received.</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>SFDC1-254: Score given for the training provided/Customer satisfcation</description>
        <label>Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveySystemReference__c</fullName>
        <description>SFDC1-6010:Survey identifier from Survey system
SFDC1-9004 : Marking this field External and Unique</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique survey identifier provided by the survey tool.</inlineHelpText>
        <label>Survey System Reference</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SurveyType__c</fullName>
        <description>SFDC1-254: describes if the survey response is Customer Care,Training or Customer First</description>
        <inlineHelpText>The type of survey that was sent to the customer: Corporate, Training (FSA) or Customer Care (Case).</inlineHelpText>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Customer First</fullName>
                    <isActive>false</isActive>
                    <label>Customer First</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyVersion__c</fullName>
        <inlineHelpText>Version of the survey questions that the customer responded to, when the feedback was received.</inlineHelpText>
        <label>Survey Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESScore__c</fullName>
        <description>Calculated Time Expectation Score. This score is provided by the survey team on a scale from 1-7.</description>
        <inlineHelpText>Time Expectation Score (TES) measures the customer&apos;s satisfaction level, based on the time taken to respond to the Case, on a scale of 1 (Extremely dissatisfied) - 7 (Extremely satisfied).</inlineHelpText>
        <label>TES Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainingMetNeeds__c</fullName>
        <inlineHelpText>Measure of whether the customer&apos;s training expectations were met, on a scale of 1 (Strongly disagree) - 7 (Strongly agree).</inlineHelpText>
        <label>Training Met Needs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-254: populated and required when the type=Training, else null and read only</description>
        <inlineHelpText>FSA ID for which the Survey Response was received.</inlineHelpText>
        <label>FSA ID</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>AUTOSGPHDAmericasAllClosed</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Age__c</columns>
        <columns>AlertType__c</columns>
        <columns>AlertStatus__c</columns>
        <columns>Contact__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ProductGroupLookup__c</columns>
        <columns>SurveyType__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>AlertStatus__c</field>
            <operation>equals</operation>
            <value>Closed - Resolved with Customer,Closed - No Action Required,Closed - Unable to Reach Customer</value>
        </filters>
        <label>AUTOS | GPHD Americas - All Closed</label>
        <queue>AUTOSGPHDAmericas</queue>
    </listViews>
    <listViews>
        <fullName>AUTOSGPHDAmericas_SurveyResponse</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Age__c</columns>
        <columns>AlertType__c</columns>
        <columns>AlertStatus__c</columns>
        <columns>Contact__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ProductGroupLookup__c</columns>
        <columns>SurveyType__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>AlertStatus__c</field>
            <operation>equals</operation>
            <value>New,Assigned,In-Progress,Escalated</value>
        </filters>
        <label>AUTOS | GPHD Americas - All Open</label>
        <queue>AUTOSGPHDAmericas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AUTOSGPHDDEAllClosed</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Age__c</columns>
        <columns>AlertType__c</columns>
        <columns>AlertStatus__c</columns>
        <columns>Contact__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ProductGroupLookup__c</columns>
        <columns>SurveyType__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>AlertStatus__c</field>
            <operation>equals</operation>
            <value>Closed - Resolved with Customer,Closed - No Action Required,Closed - Unable to Reach Customer</value>
        </filters>
        <label>AUTOS | GPHD DE - All Closed</label>
        <queue>AUTOSGPHDDE</queue>
    </listViews>
    <listViews>
        <fullName>AUTOSGPHDDE_SurveyResponse</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Age__c</columns>
        <columns>AlertType__c</columns>
        <columns>AlertStatus__c</columns>
        <columns>Contact__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ProductGroupLookup__c</columns>
        <columns>SurveyType__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>AlertStatus__c</field>
            <operation>equals</operation>
            <value>New,Assigned,In-Progress,Escalated</value>
        </filters>
        <label>AUTOS | GPHD DE - All Open</label>
        <queue>AUTOSGPHDDE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>